# turtlebot3_description_with_d435

./: CMakeLists.txt  package.xml  turtlebot3_description_with_d435.rosinstall
urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_burger_for_autorace.urdf.xacro  turtlebot3_burger_for_autorace_2020.urdf.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator.urdf.xacro  turtlebot3_waffle_pi_with_d435.urdf.xacro
urdf/waffle_pi/: turtlebot3_waffle_pi.gazebo.xacro
urdf/waffle_pi/no_d435/: lidar-1m.xacro  lidar-original.xacro
urdf/waffle_pi/with_d435/: lidar-1m.xacro  lidar-original.xacro
urdf/waffle_pi/with_d435i/: lidar-original.xacro
